--- a/config/src/main/resources/shared/application.yml
+++ b/config/src/main/resources/shared/application.yml
@@ -23,5 +23,10 @@ security:
       user-info-uri: http://auth-service:5000/uaa/users/current
 
 spring:
+  sleuth:
+    sampler:
+      probability: 1.0 # 将采样比例设置为 1.0，也就是全部都需要。默认是 0.1
+  zipkin:
+    base-url: http://trace:9411 # 指定了 Zipkin 服务器的地址
   rabbitmq:
     host: rabbitmq
